fix(change zindex in mainstyle): z-index of loading is too high to cover header and navbar
z-index of loading is too high to cover header and navbar, so z-index of
header,footer,navbar,account and searchFrame should be changed

--- a/src/components/header/search/searchFrame.scss
+++ b/src/components/header/search/searchFrame.scss
@@ -69,6 +69,7 @@
   }
 
   &.upper{
+    z-index: $upperSearchFrameZIndex  !important;
     max-width: 300px;
   
     li {
